force-app/main/default/objects/Pharmacy_Store__c/Pharmacy_Store__c.object-meta.xml
<CustomObject>
    <description>Represents a pharmacy store location.</description>
    <label>Pharmacy Store</label>
    <nameField>
        <label>Pharmacy Store Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pharmacy Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>