force-app/main/default/objects/Pharmacy_Store__c/fields/Cold_Chain_Capable__c.field-meta.xml
<CustomField>
    <fullName>Cold_Chain_Capable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the store can handle cold chain medications</description>
    <label>Cold Chain Capable</label>
    <type>Checkbox</type>
</CustomField>