force-app/main/default/objects/Pharmacy_Store__c/fields/DEA_Registration__c.field-meta.xml
<CustomField>
    <fullName>DEA_Registration__c</fullName>
    <description>DEA registration identifier for controlled substances handling</description>
    <inlineHelpText>Provide DEA Registration if applicable.</inlineHelpText>
    <label>DEA Registration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>