force-app/main/default/objects/Pharmacy_Store__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <description>Operational district of the store</description>
    <inlineHelpText>Enter the district/region for rollups and routing.</inlineHelpText>
    <label>District</label>
    <length>80</length>
    <type>Text</type>
</CustomField>