force-app/main/default/objects/Pharmacy_Store__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the store is active for operations</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>